--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -396,15 +396,15 @@ footer {
   footer nav {
     width: 100%;
     min-width: 50%;
-    margin: 0 auto 2rem; }
+    margin: 0 auto; }
     footer nav ul {
       align-items: center;
       flex-direction: row;
-      justify-content: center;
+      justify-content: space-between;
       width: 100%;
       padding: 0; }
       footer nav ul li {
-        padding: 0 1rem; }
+        padding: 0; }
       footer nav ul li:last-child {
         padding-bottom: 0; }
   footer .contact {
@@ -417,9 +417,7 @@ footer {
     footer .contact p {
       max-width: none; }
   footer p.xsmall {
-    position: absolute;
-    bottom: 2rem;
-    width: 100%;
+    width: calc(100% - 1rem);
     padding: 1rem 0 0;
     text-align: center; }
 
